# browser-fetcher

./: .coveragerc  .pylintrc  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
browser_fetcher/: __main__.py  downloader.py  error.py  logger.py  main.py  provider.py  utils.py
browser_fetcher/firefox/: cli.py  instance.py  model.py
