[tool.poetry]
name = "browser-fetcher"
version = "0.1.0"
description = ""
authors = ["Sergey Reshetnikov <resh.sersh@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.8"
click = "^7.1.2"
more_itertools = "^8.7.0"
pydantic = "^1.8.1"
requests = "^2.25.1"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pylint = "^2.7.2"
mypy = "^0.812"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
